# auto_fapiao

./: .gitignore  CLAUDE.md  README.md  contract.py  excel_utils.py  gui.pyw  main.py  ocr.py  pyproject.toml  rename.py  report.py  requirements.txt  run.bat  verify.py  用户手册.md
docs/: request.md
docs/superpowers/plans/: 2026-05-23-invoice-automation.md
docs/superpowers/specs/: 2026-05-23-invoice-automation-design.md
tests/: conftest.py  test_contract.py  test_integration.py  test_ocr.py  test_rename.py  test_verify.py
